[package]
name = "organisiert"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
dirs = "6.0.0"
walkdir = "2.5.0"
audiotags = "0.5.0"
indicatif = "0.18.0"
console = "0.16.0"
rayon = "1.11.0"
clap = { version = "4.5.45", features = ["derive"] }
